fix(summary): fix summary alignment

--- a/theme/less/components/summary.less
+++ b/theme/less/components/summary.less
@@ -39,7 +39,6 @@ Summaries allow users to have an overview of content and navigate between page s
     --xl-block: 0.5rem;
 
     .fr-summary__link {
-        padding-left: 0.5rem;
         color: @blue-400;
         .sup, .sup::before, .sup::after  {
             color: var(--g600);
@@ -47,10 +46,9 @@ Summaries allow users to have an overview of content and navigate between page s
     }
 
     .fr-summary__link::before {
-        position: relative;
-        left: 0;
         font-weight: normal;
         color: @grey-500;
+        bottom: 0.5rem;
     }
 
     .fr-summary__list {
